# ambe-codec-p25

./: CMakeLists.txt  README.md  build.sh  deploy.sh  main.cpp  main.h  settings.gradle
app/: build.gradle
app/src/androidTest/java/cz/okdmr/mmdvm/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  ambe3600x2400.c  ambe3600x2400_const.h  ambe3600x2450.c  ambe3600x2450_const.h  aux_sub.cc  basic_op.h  basicop2.cc  ch_decode.cc  ch_decode.h  ch_encode.cc  dc_rmv.cc  decode.cc  decode.h  dsp_sub.cc  dsp_sub.h  ecc.c  ecc_const.h  encode.cc  encode.h  globals.h  imbe.h  imbe_vocoder.cc  imbe_vocoder.h  imbe_vocoder_api.h  imbe_vocoder_impl.cc  imbe_vocoder_impl.h  math_sub.cc  math_sub.h  mbelib.c  mbelib.h  mbelib_const.h  mbelib_parms.h  mmdvm.cpp  mmdvm.h  pe_lpf.cc  pitch_est.cc  pitch_est.h  pitch_ref.cc  pitch_ref.h  (+18 more)
app/src/main/java/com/harris/rf/bbptt/core/: BbPttCore.java  BeOnAlertInfo.java  BeOnCellDataConnection.java  BeOnDataConnection.java  BeOnEmergency.java  BeOnEntity.java  BeOnGroup.java  BeOnGroupId.java  BeOnGroupInProfile.java  BeOnGroupMembership.java  BeOnInterestedUeData.java  BeOnInternetDataConnection.java  BeOnKeyPresence.java  BeOnLlak.java  BeOnLocation.java  BeOnNetworkKmfKey.java  BeOnPatchId.java  BeOnPresence.java  BeOnProfile.java  BeOnPtt.java  BeOnSimulselectId.java  BeOnSlnInfo.java  BeOnTek.java  BeOnTextMessage.java  BeOnUkek.java  BeOnUkeksContainer.java  BeOnUser.java  BeOnUserEquipment.java  BeOnUserId.java  BeOnUserPresenceLocation.java  (+20 more)
app/src/main/java/cz/okdmr/kaitai/etsi/: DmrCsbk.java  DmrData.java  DmrDataHeader.java  DmrIpUdp.java  FullLinkControl.java
app/src/main/java/cz/okdmr/kaitai/homebrew/: Homebrew2015.java  Mmdvm2020.java
app/src/main/java/cz/okdmr/kaitai/hytera/: DataDeliveryStates.java  DataTransmitProtocol.java  Datetimestring.java  Gpsdata.java  HyteraDmrApplicationProtocol.java  HyteraRadioNetworkProtocol.java  HyteraSimpleTransportReliabilityProtocol.java  Intervalstring.java  IpSiteConnectHeartbeat.java  IpSiteConnectProtocol.java  LocationProtocol.java  RadioControlProtocol.java  RadioId.java  RadioIp.java  RadioRegistrationService.java  RealTimeTransportProtocol.java  TelemetryProtocol.java  TextMessageProtocol.java
app/src/main/java/cz/okdmr/kaitai/motorola/: AutomaticRegistrationService.java  MotorolaBinaryXml.java  TextMessageProtocol.java
app/src/main/java/cz/okdmr/mmdvm/: AccessibilityService.java  BroadcastListener.java  ContactDetailActivity.java  ContactsActivity.java  ContactsAdapter.java  MainActivity.java  MmdvmService.java  SettingsStorage.java
app/src/main/java/cz/okdmr/mmdvm/homebrew/: MMDVM.java  MMDVMClient.java
app/src/main/java/cz/okdmr/mmdvm/model/: StoredContact.java  StoredGPSSettings.java  StoredIdentity.java  StoredServer.java
app/src/main/res/drawable/: ic_baseline_add_24.xml  ic_baseline_cloud_download_24.xml  ic_baseline_delete_forever_24.xml  ic_baseline_done_24.xml  ic_baseline_group_24.xml  ic_baseline_local_phone_24.xml  ic_baseline_person_24.xml  ic_baseline_storage_24.xml  ic_identity_platform_48.xml
app/src/main/res/layout/: activity_main.xml  contact_edit.xml  contact_list_item.xml  list_view.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: accessibility.xml
app/src/test/java/cz/okdmr/mmdvm/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
lib/: liblib-core.so.c  liblib-core.so.ghidra-auto-generated.h  liblib-core.so.ghidra-builtin-types.h
linux_cross_build/: CMakeLists.txt  build.cross.sh
(+22 files in other folders)
